<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/email_et"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/logo_desc"
        android:padding="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:src="@drawable/logo"

        />

    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:autofillHints="email"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_et"
        android:layout_alignStart="@id/email_et"
        android:layout_alignEnd="@id/email_et"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_et"
        android:layout_alignStart="@id/email_et"
        android:layout_alignEnd="@id/email_et"
        android:layout_gravity="bottom"
        android:layout_marginVertical="10dp"
        android:background="@color/blue"
        android:onClick="onSignInBtn"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_btn"
        android:layout_alignStart="@id/email_et"
        android:layout_alignEnd="@id/email_et"
        android:layout_gravity="bottom"
        android:layout_marginVertical="10dp"
        android:background="@color/blue"
        android:onClick="onSignUpBtn"

        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</RelativeLayout>
